--- a/motan-transport-netty/pom.xml
+++ b/motan-transport-netty/pom.xml
@@ -31,10 +31,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.jboss.netty</groupId>
+			<groupId>io.netty</groupId>
 			<artifactId>netty</artifactId>
-			<version>3.2.5.Final</version>
+			<version>3.7.0.Final</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>com.weibo</groupId>
 			<artifactId>motan-core</artifactId>
