--- a/motan-demo/motan-demo-api/pom.xml
+++ b/motan-demo/motan-demo-api/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>com.weibo</groupId>
         <artifactId>motan-demo</artifactId>
-        <version>0.3.1</version>
+        <version>0.3.1-update-netty-SNAPSHOT</version>
     </parent>
     <artifactId>motan-demo-api</artifactId>
     <name>motan-demo-api</name>
@@ -35,7 +35,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>1.10</version>
+                <version>1.12</version>
                 <executions>
                     <execution>
                         <phase>generate-sources</phase>
