--- a/motan-extension/filter-extension/pom.xml
+++ b/motan-extension/filter-extension/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>com.weibo</groupId>
         <artifactId>motan-extension</artifactId>
-        <version>0.3.1</version>
+        <version>0.3.1-update-netty-SNAPSHOT</version>
     </parent>
     <artifactId>filter-extension</artifactId>
     <name>filter-extension</name>
