--- a/motan-extension/protocol-extension/motan-protocol-yar/pom.xml
+++ b/motan-extension/protocol-extension/motan-protocol-yar/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.weibo</groupId>
         <artifactId>protocol-extension</artifactId>
-        <version>0.3.1</version>
+        <version>0.3.1-update-netty-SNAPSHOT</version>
     </parent>
     <artifactId>motan-protocol-yar</artifactId>
     <name>motan-protocol-yar</name>
