--- a/motan-extension/serialization-extension/pom.xml
+++ b/motan-extension/serialization-extension/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.weibo</groupId>
         <artifactId>motan-extension</artifactId>
-        <version>0.3.1</version>
+        <version>0.3.1-update-netty-SNAPSHOT</version>
     </parent>
     <artifactId>serialization-extension</artifactId>
     <name>serialization-extension</name>
