--- a/motan-registry-zookeeper/pom.xml
+++ b/motan-registry-zookeeper/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<artifactId>motan</artifactId>
 		<groupId>com.weibo</groupId>
-		<version>0.3.1</version>
+		<version>0.3.1-update-netty-SNAPSHOT</version>
 	</parent>
 	<artifactId>motan-registry-zookeeper</artifactId>
 	<name>motan-registry-zookeeper</name>
