--- a/motan-transport-netty/pom.xml
+++ b/motan-transport-netty/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>com.weibo</groupId>
 		<artifactId>motan</artifactId>
-		<version>0.3.1</version>
+		<version>0.3.1-update-netty-SNAPSHOT</version>
 	</parent>
 	<artifactId>motan-transport-netty</artifactId>
 	<name>motan-transport-netty</name>
